# facet

./: Cargo.toml  README.md
.github/workflows/: release.yml  tauri-build-test.yml  ts-quality.yml
crates/facet-app/: README.md  package.json
crates/facet-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/facet-app/src-tauri/src/: lib.rs  main.rs
crates/facet-app/src-tauri/src/agent/: config.rs  workflow.rs
crates/facet-app/src-tauri/src/commands/: browser.rs  developer_mode.rs  mod.rs
crates/facet-app/src-tauri/src/developer_mode/: test_server.rs  tests.rs
crates/facet-app/src-tauri/src/logging/: logger.rs  mod.rs
crates/facet-app/src-tauri/src/profiles/: mod.rs
crates/facet-app/src-tauri/tests/: developer_mode_integration.rs  e2e_developer_mode.rs
crates/facet-app/src/lib/: types.ts
crates/facet-cli/: Cargo.toml  README.md
crates/facet-cli/src/: main.rs
crates/facet-core/: Cargo.toml
crates/facet-core/src/: agent.rs  ingest.rs  memory.rs  pruning.rs  search.rs
crates/facet-core/src/llm/: local.rs  mod.rs
crates/facet-core/tests/: local_llm_it.rs
crates/facet-downloader/: Cargo.toml
crates/facet-downloader/src/: model_downloader.rs
crates/facet-downloader/tests/: integration_tests.rs
crates/facet-graph/: Cargo.toml
crates/facet-graph/src/: ephemeral_graph.rs  lib.rs  query.rs  surreal_store.rs
crates/facet-graph/tests/: surreal_it.rs
crates/facet-server/: Cargo.toml  README.md
crates/facet-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  session.rs
crates/facet-server/src/api/: execute.rs  inference.rs  mod.rs  sessions.rs
crates/facet-server/src/claude/: executor.rs  mock.rs  mod.rs
crates/facet-server/tests/: integration_tests.rs
crates/robert-core/tests/: local_llm_it.rs
crates/robert-graph/: Cargo.toml
crates/robert-graph/src/: ingest.rs  surreal_store.rs
crates/robert-graph/tests/: surreal_it.rs
crates/types/: Cargo.toml
crates/types/src/profiles/: auth.rs  crypto.rs  manager.rs  storage.rs
docs/: README.md
docs/architecture/: facet-generation-approach.md  facet-server-specification.md
docs/architecture/decisions/: README.md  adr-001-core-crate-structure.md  adr-003-facet-server-architecture.md  adr-006-local-llm-requirement.md  adr-008-surrealdb-selection.md
docs/development/: build-instructions.md  linux-setup.md  ota-implementation-summary.md  ota-updates.md  setup-ota-keys.md  test-organization.md  testing.md  ts-code-quality.md
docs/product/: go-to-market.md  hypothesis.md  implementation-plan.md  pitch.md  prd.md
