[package]
name = "facet-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "facet"
path = "src/main.rs"

[dependencies]
# Facet internal dependencies
facet-server = { workspace = true }
facet-core = { workspace = true }
facet-types = { workspace = true }

# CLI framework
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
dirs = { workspace = true }
toml = { workspace = true }
