[package]
name = "facet-server"
version = "1.0.0"
edition = "2021"
authors = ["Facet Team"]
description = "Remote execution server for Facet desktop application - forwards requests to claude-cli"
license = "MIT"

[dependencies]
warp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json", "stream"] }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
mock = []

[[bin]]
name = "facet-server"
path = "src/main.rs"

[lib]
name = "facet_server"
path = "src/lib.rs"
